<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="526dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/Flip_Coin"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/CoinImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            app:srcCompat="@drawable/cross" />

        <Button
            android:id="@+id/flip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/Flip_Coin_btn"
            android:textSize="30sp" />

        <Button
            android:id="@+id/back_btn_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regresar"
            android:layout_margin="15dp"
            android:textSize="30sp"
            />
    </LinearLayout>
</FrameLayout>